fix(Add New Link): Make Add New Link visible
- Change the color of the add new link to black
- Change the onhover color of the add new link to white

[Fixex #152545563]

--- a/client/scss/main.scss
+++ b/client/scss/main.scss
@@ -255,10 +255,10 @@ body {
 }
 
 a.add-new {
-  color: black;
+  color: #000000;
 }
 
 a.add-new:hover {
-  color: aliceblue;
+  color: #f0f8ff;
 }
 
